# point-distance-calculator

./: .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
point_distance_calculator/: distance_calculator.py  input_printer.py  main.py  point_generator.py  result_printer.py  types.py
stubs/haversine/: haversine.pyi
tests/: conftest.py  test_distance_calculator.py  test_input_printer.py  test_main.py  test_point_generator.py  test_result_printer.py
