[tool.poetry]
name = "point-distance-calculator"
version = "0.1.0"
description = ""
authors = ["Daniel Teske <daniel.teske@free-now.com>"]
readme = "README.md"
packages = [{include = "point_distance_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
main = "point_distance_calculator.main:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
