[tool.poetry]
name = "point-distance-calculator"
version = "0.1.0"
description = ""
authors = ["Daniel Teske <daniel.teske@free-now.com>"]
readme = "README.md"
packages = [{include = "point_distance_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
haversine = "^2.8.0"

[tool.poetry.scripts]
main = "point_distance_calculator.main:main"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
